# dr_mike_gym_tracker_bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: exercises.csv
docs/: AI_API_SETUP.md  GOOGLE_SHEETS_SETUP.md  SETUP_GUIDE.md  TELEGRAM_SETUP.md
src/: __init__.py
src/agents/: __init__.py  gym_agent.py
src/bot/: __init__.py  telegram_bot.py
src/database/: __init__.py  exercise_db.py  user_state_manager.py
src/models/: __init__.py  exercise.py
src/sheets/: __init__.py  sheets_manager.py
